# Quite-Whisper

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  gradlew.bat  index.html  overlay.html  package-lock.json  package.json  settings.gradle.kts  vite.config.ts
.codex/environments/: environment.toml
build-logic/: build.gradle.kts
build-logic/src/main/kotlin/plugins/: RustEnginePlugin.kt
build-logic/src/main/kotlin/tasks/: CheckRustEngineToolchainTask.kt  MarkBundledExecutablesTask.kt  MarkExecutableTask.kt
composeApp/: build.gradle.kts
composeApp/src/commonMain/kotlin/fabled/quitewhisper/data/: EngineDictationRepository.kt
composeApp/src/commonMain/kotlin/fabled/quitewhisper/di/: AppModules.kt
composeApp/src/commonMain/kotlin/fabled/quitewhisper/domain/: DictationModels.kt  DictationRepository.kt
composeApp/src/jvmMain/kotlin/fabled/quitewhisper/app/: Main.kt
core/design-system/: build.gradle.kts
core/presentation/: build.gradle.kts
docs/: compose-shell.md
engine/: Cargo.toml
engine/src/: audio.rs  engine.rs  hotkey.rs  inserter.rs  lib.rs  model.rs  overlay.rs  prompt.rs  settings.rs
engine/tests/: engine_protocol.rs  hotkey.rs  stdio_lifecycle.rs  transcribe_fixture.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: create-icon.mjs  windows-dev.ps1
src/: main.ts  overlay.css  overlay.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  inserter.rs  lib.rs  main.rs  model.rs  overlay.rs  settings.rs  speech.rs  state.rs  tray.rs
src-tauri/tests/: transcribe_fixture.rs
(+65 files in other folders)
