[package]
name = "quite-whisper-engine"
version = "0.1.0"
description = "Local QuiteWhisper dictation engine and sidecar"
authors = ["QuiteWhisper"]
edition = "2021"

[lib]
name = "quite_whisper_engine"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
cpal = "0.16"
dirs = "6.0"
enigo = "0.1"
futures-util = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "rt-multi-thread"] }
whisper-rs = "0.16"

[dev-dependencies]
hound = "3.5"
tempfile = "3.19"
