[package]
name = "quite-whisper"
version = "0.1.0"
description = "Local push-to-talk dictation for Windows and macOS"
authors = ["QuiteWhisper"]
edition = "2021"

[lib]
name = "quite_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
anyhow = "1.0"
arboard = "3.4"
cpal = "0.16"
dirs = "6.0"
enigo = "0.1"
futures-util = "0.3"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.4.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.2"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util"] }
whisper-rs = "0.16"

[dev-dependencies]
hound = "3.5"
tempfile = "3.19"
